# -SKSE-plugin-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg-configuration.json  vcpkg.json
include/: PCH.h
include/Events/: Events.h
src/: main.cpp
